--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -916,7 +916,7 @@ $akvo-color-hover: #4f5459;
   height: 600px;
 }
 
-#passo2, #passo3, #passo4, #passo5 {
+#passo1, #passo2, #passo3, #passo4, #passo5 {
     scroll-margin: 160px;
 }
 
