--- a/styles/Comentario.module.scss
+++ b/styles/Comentario.module.scss
@@ -1,6 +1,5 @@
 .comentario-header {
-  padding: 0 12px;
-  margin-top: 10px;
-  margin-right: 20px;
+  padding: 5px 20px 5px 12px;
   font-weight: 500;
+  background-color: rgb(0, 0, 0, 0.06);
 }
