--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -90,6 +90,7 @@ body {
   margin: 0;
 }
 
+
 .app {
   margin: 0px;
   height: 100%;
@@ -1034,22 +1035,11 @@ table td {
 }
 
 .inventoryTable thead {
-  z-index: 10001;
+  z-index: 3;
   background-color: #fff !important;
+  position: sticky;
+  top: 0;
 }
-
-// .inventoryTable th:nth-child(1),
-// .inventoryTable td:nth-child(1),
-// .inventoryTable th:nth-child(2),
-// .inventoryTable td:nth-child(2) {
-//   z-index: 2;
-//   position: sticky;
-//   left: 0px;
-// }
-
-// .inventoryTable thead:nth-child(2) {
-//   position: sticky;
-// }
 
 .inventoryTable thead tr {
   z-index: 2;
@@ -1093,12 +1083,74 @@ table td {
   background-color: #fff;
 }
 
-.inventoryTable td:nth-child(1),
-.inventoryTable td:nth-child(2),
-.inventoryTable td:nth-child(3){
-  z-index: 1;
- background: #fff;
+.showMore {
+  height: 500px;
+  overflow-x: auto;
 }
+
+.showMore thead {
+  z-index: 3;
+  background-color: #fff !important;
+  position: sticky;
+  top: 0;
+}
+
+.showMore thead tr {
+  z-index: 2;
+  background-color: #fff;
+  border-bottom-width: 0;
+}
+
+.showMore thead tr:nth-child(2) {
+  top: 0;
+  position: sticky;
+}
+
+
+.showMore tr>th:first-child,
+.showMore tr>td:first-child {
+  position: sticky;
+  left: 0;
+  z-index: 1;
+  background-color: #fff;
+}
+
+.showMore tr>th:nth-child(2),
+.showMore tr>td:nth-child(2) {
+  position: sticky;
+  left: 3.35rem;
+  z-index: 1;
+  background-color: #fff;
+}
+
+.showMore tr>th:nth-child(3),
+.showMore tr>td:nth-child(3) {
+  position: sticky;
+  left: 5.05rem;
+  z-index: 1;
+  background-color: #fff;
+}
+
+
+.showMore thead tr th div {
+  z-index: 1;
+  background-color: #fff;
+}
+
+.showLessBtn {
+  margin-top: 10px;
+}
+
+.showMoreBtn {
+  margin-top: 10px;
+}
+
+// .inventoryTable td:nth-child(1),
+// .inventoryTable td:nth-child(2),
+// .inventoryTable td:nth-child(3){
+//   z-index: 1;
+//  background: #fff;
+// }
 
 .shoppingCart_button {
   position: relative;
