Alteracoes para o pitch

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1188,3 +1188,15 @@ table td {
   animation: collapsed 1s;
 }
 
+.outerPage {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+}
+
+.lalalalala {
+  z-index: 1000;
+}
