--- a/src/components/template/Nav.module.scss
+++ b/src/components/template/Nav.module.scss
@@ -7,6 +7,8 @@
     top: var(--header-height);
     height: 100vh;
     width: var(--aside-fixed-width);
+    z-index: 1000;
+    background-color: #fff;
 }
 
 .menuArea ul {
